updated changes to file paths on the index.html file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <head>
     <meta charset="utf-8">
     <title>Akan Name Generator</title>
-    <link rel="stylesheet" href="css/style.css" media="all">
+    <link rel="stylesheet" href="./css/styles.css" media="all">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="icon" href="./images/FB_IMG_1613638151710.jpg" type="img/jpg">
   </head>
@@ -67,7 +67,8 @@
       </div>
     </div>
 
-    <script src="script/script.js" ></script>
+    <script src="./js/script.js" ></script>
+    <script src="./js/bootstrap.min.js"></script>
 
   </body>
 </html>
